--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "node node_modules/@docusaurus/core/bin/docusaurus.mjs start --no-open",
+    "start:zh": "node node_modules/@docusaurus/core/bin/docusaurus.mjs start --locale zh-Hans --no-open",
+    "start:en": "node node_modules/@docusaurus/core/bin/docusaurus.mjs start --locale en --no-open",
+    "start:ja": "node node_modules/@docusaurus/core/bin/docusaurus.mjs start --locale ja --no-open",
+    "start:es": "node node_modules/@docusaurus/core/bin/docusaurus.mjs start --locale es --no-open",
+    "start:de": "node node_modules/@docusaurus/core/bin/docusaurus.mjs start --locale de --no-open",
     "build": "node --max-old-space-size=6144 node_modules/@docusaurus/core/bin/docusaurus.mjs build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
+    "preview": "npm run build && npm run serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
