--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bs": "npm run clear && npm run build && npm run serve",
     "preview": "npm run build && npm run serve",
     "write-translations": "docusaurus write-translations",
-    "translate": "npm run write-translations && node tool/check-doc-translations.js && node tool/translate-i18n-json.js",
+    "translate": "npm run write-translations && node tool/check-doc-translations.js && node tool/translate-i18n-json.js && node tool/translate-i18n-json-itemized.js",
     "translate-i18n-json": "node tool/translate-i18n-json.js",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
